# terrariumussy

./: .gitignore  README.md  SPEC.md  pyproject.toml
demo/: index.html  record.tape
demo/assets/: diagnose_output.txt  export.json  health_output.txt  health_with_adapters.txt  snapshot.txt  watch_output.txt  watch_with_adapters.txt
demo/fixtures/: churnmap.json  demo_health.json  endemic.json  fatigue.json  kompressi.json  proprioception.json  sentinel.json  seral.json  snapshot.json
demo/panels/: dashboard.js  ecosystem.js  seasons.js
demo/synthetic_project/src/: api.py  auth.py  cache.py  config.py  database.py  integrations.py  logging_utils.py  main.py  metrics.py  models.py  notifications.py  schemas.py  search.py  test_helpers.py  utils.py  worker.py
demo/synthetic_project/tests/: test_api.py  test_auth.py  test_utils.py
docs/: adapters.md
terrarium/: __init__.py  __main__.py  cli.py  engine.py  health.py  scoring.py  terminal.py  viz.py  watcher.py
terrarium/adapters/: __init__.py  base.py  churnmap.py  endemic.py  fatigue.py  kompressi.py  proprioception.py  sentinel.py  seral.py  snapshot.py
terrarium/ecosystem/: __init__.py  builder.py  diagnosis.py  health_scoring.py  model.py  organisms.py
terrarium/metrics/: __init__.py  complexity.py  coverage.py  dead_code.py  engine.py  git_churn.py  models.py  stability.py
terrarium/renderers/: __init__.py  seasons.py  static_export.py  terminal.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_complexity.py  test_coverage.py  test_dead_code.py  test_diagnosis.py  test_ecosystem_model.py  test_engine.py  test_git_churn.py  test_metrics_engine.py  test_metrics_models.py  test_seasons.py  test_stability.py  test_static_export.py  test_terminal_renderer.py  test_viz.py  test_watcher.py
tests/fixtures/: churnmap.json  coverage.json  endemic.json  fatigue.json  kompressi.json  proprioception.json  sentinel.json  seral.json  snapshot.json
tests/fixtures/sample_project/src/: auth.py  deprecated.py  main.py  utils.py
tests/fixtures/sample_project/tests/: test_main.py
